--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,30 @@ body {
   width: 100%;
   height: 96%; /* Example height, adjust as needed */
 }
+
+.start-menu {
+  background: linear-gradient(
+    180deg,
+    #204b96,
+    #70a7e7,
+    #1555aa 8px,
+    #4087df 80px,
+    #4488db calc(100% - 80px),
+    #0d4ba3 calc(100% - 3px),
+    #0d4aa5
+  );
+  box-shadow: inset 0 0 20px 10px #0e53b9b3;
+}
+
+.divider {
+  background: linear-gradient(90deg, #fff, #fdc166, #f7b555, #f7b555, #fff);
+}
+
+.drop-shad {
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+}
+
+.start-context-right {
+  background-color: #d3e5fb;
+  border-left: 1px solid rgb(154, 192, 239);
+}
