--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,10 @@ body {
   background: linear-gradient(90deg, #fff, #fdc166, #f7b555, #f7b555, #fff);
 }
 
+.divider2 {
+  background: linear-gradient(90deg, #fff, #c4c4c4, #a1a1a1, #c4c4c4, #fff);
+}
+
 .drop-shad {
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
