--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,27 @@ body {
   box-shadow: inset 0 0 20px 10px #0e53b9b3;
 }
 
+.window {
+  position: absolute;
+  background: linear-gradient(
+    180deg,
+    #3168d5,
+    #4a92e6 2px,
+    #255dd6 5px,
+    #2258d6,
+    15px,
+    #2563e0 95%,
+    #1e50c3
+  );
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.8));
+  will-change: filter;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 10px #00000080;
+  /* transition: transform 0.2s ease-in-out, opacity 0.2s ease-in-out; */
+}
+
 .divider {
-  background: linear-gradient(90deg, #fff, #fdc166, #f7b555, #f7b555, #fff);
+  background: linear-gradient(90deg, #fff, #fdc166, #f7b555, #f7b555, #d3e5fb);
 }
 
 .divider2 {
